<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="20dip"
        android:text="@string/prtReportStatus"
        android:textColor="@color/blueText"
        android:textSize="25dip" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/location_spinner_prompt" />

    <RadioGroup
        android:id="@+id/upDownGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/downRB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/downLabel"
            android:textColor="@color/blueText" />

        <RadioButton
            android:id="@+id/runningRB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/runningLabel"
            android:textColor="@color/blueText" />
    </RadioGroup>

    <Button
        android:id="@+id/prtSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:textColor="@color/blueText" />

    <TextView
        android:id="@+id/PRTReportStatusLastReport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="No reports yet"
        android:textColor="@color/blueText" >
    </TextView>
</LinearLayout>