<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dip" >

        <Button
            android:id="@+id/mainPRTViewStatusButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prtViewStatus"
            android:textColor="@color/blueText" />

        <Button
            android:id="@+id/mainPRTReportButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prtReportStatus" 
            android:textColor="@color/blueText"/>

        <Button
            android:id="@+id/mainBusButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/busStart"
            android:textColor="@color/blueText" />

</LinearLayout>